src/test/ui/marker_trait_attr/overlap-marker-trait.stderr
error[E0283]: type annotations needed
  --> $DIR/overlap-marker-trait.rs:27:5
   |
LL |     is_marker::<NotDebugOrDisplay>();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ cannot infer type for struct `NotDebugOrDisplay`
   |
   = note: cannot satisfy `NotDebugOrDisplay: Marker`
note: required by a bound in `is_marker`
  --> $DIR/overlap-marker-trait.rs:15:17
   |
LL | fn is_marker<T: Marker>() { }
   |                 ^^^^^^ required by this bound in `is_marker`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0283`.
